# ai-ebook-sales-agent

./: .gitignore  connect_memory_with_llm.py  create_memory_for_llm.py  main.py  pyproject.toml  requirements.txt
vectorstore/db_faiss/: index.faiss  index.pkl
